2009-05-12  Roland Steiner <rolandsteiner@google.com>

        Reviewed by Eric Seidel.

        Bug 25738: Skia: CSS border style not cleared for SVG object
        https://bugs.webkit.org/show_bug.cgi?id=25738

        * platform/mac/svg/custom/no-inherited-dashed-stroke-expected.checksum: Added.
        * platform/mac/svg/custom/no-inherited-dashed-stroke-expected.png: Added.
        * platform/mac/svg/custom/no-inherited-dashed-stroke-expected.txt: Added.
        * svg/custom/no-inherited-dashed-stroke.xhtml: Added.

2009-05-12  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        <rdar://problem/6881457> Crash occurs at JSC::Interpreter::execute() when loading http://www.sears.com

        Add a test for using the arguments object inside an exception handler.

        * fast/js/arguments-expected.txt:
        * fast/js/resources/arguments.js:
        (argumentCalleeInException):

2009-05-12  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Eric Seidel.

        Bug 21903: Adds DOM bindings for the placeholder property of the
        HTMLInputElement.
        https://bugs.webkit.org/show_bug.cgi?id=21903

        * fast/forms/placeholder-dom-property-expected.txt: Added.
        * fast/forms/placeholder-dom-property.html: Added.
        * fast/forms/resources/placeholder-dom-property.js: Added.

2009-05-12  Adam Barth  <abarth@webkit.org>

        Reviewed by Dimitri Glazkov.

        Test that we use the lexical global object in document.open,
        document.write, and document.writeln.

        * http/tests/security/aboutBlank/security-context-grandchildren-lexical-expected.txt: Added.
        * http/tests/security/aboutBlank/security-context-grandchildren-lexical.html: Added.
        * http/tests/security/aboutBlank/security-context-grandchildren-write-lexical-expected.txt: Added.
        * http/tests/security/aboutBlank/security-context-grandchildren-write-lexical.html: Added.