@@ -1,0 +1,3 @@
+Test that a different origin manifest is completely ignored.
+
+PASS
