@@ -1,3 +1,13 @@
+2009-05-13  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=25749
+        Add a test for non-same origin appcache manifest URL
+
+        * http/tests/appcache/different-origin-manifest-expected.txt: Added.
+        * http/tests/appcache/different-origin-manifest.html: Added.
+
 2009-05-12  Roland Steiner <rolandsteiner@google.com>
 
         Reviewed by Eric Seidel.
